16 Mar 2006: Wouter
	- Fixed up SOA INFO Send routines. Send from server works.
	- niced up xfrd state file.
	- Fixed up so that after a reload it will continue in diff file
	  where it left off.

15 Mar 2006: Wouter
	- Fixed up domain table insert, it was being used in routines
	  that originate from nsd-xfer that do not set compression numbers
	  correctly.
	- memleak fix in diffile in case of error.
	- difffile processing works so that NSD can read an axfr saved
	  into the nsd.diff file. (xfrd already request and save it there).
	- split off xfrd tcp handling into xfrd-tcp.c.
	- cleaned up send_udp in xfrd, and read_state.
	- removed xfrd tcp_send_blocking.
	- xfrd sets state from ok to refresh to expired based on timeout.
	- xfrd sets reload timeout.
	- Added zone updated to keep track of zones that are changed
	  after a reload. These zones get their information notifified
	  to xfrd.
	- removed unused zprintrr declaration from zonec.h
	- nsd sends soa information to xfrd.

14 Mar 2006: Wouter
	- TODO updated
	- worked on reload ixfr. It will add/delete RRs and zones.
	- xfrd receive parse of xfr messages improved. writes commit.
	- server compressed_dname_offsets table is increased if reload
	  creates extra names.
	- difffile will create zone and apex if not there (i.e. the zone
	  is configured but no data file provided).
	- bit more verbose in error message for bad diff file.
	- Typo fix in sample config file.

13 Mar 2006: Wouter
	- configure sets fseek (fgetpos/fsetpos) to use 64 bit interface
	  with _FILE_OFFSET_BITS=64.
	- nsd will skip loading the .db if the DB checksum is the same.
	- Miek added trace test and nsd kill test.
	- Wouter worked on diff file c.

10 Mar 2006: Wouter
	- Cleanup of UDP/TCP code in XFRD.
	- xfrd now has tcp max connections and managing. tcp read/write.
	- response TC on UDP ixfr, starts TCP.
	- sends correct ixfr and axfr queries, a bind server answers.
	- made packet_skip_dname() public.