@@ -596,7 +596,7 @@ server_reload(struct nsd *nsd, region_type* server_region, netio_type* netio,
 
 	/* inform xfrd of new SOAs */
 	for(zone= nsd->db->zones; zone; zone = zone->next) {
-		uint32_t sz;
+		uint16_t sz;
 		if(0&&zone->updated == 0) /* DEBUG turned off for testing */
 			continue;
 		log_msg(LOG_INFO, "nsd: sending soa info for zone %s",
@@ -605,12 +605,12 @@ server_reload(struct nsd *nsd, region_type* server_region, netio_type* netio,
 		sz = dname_total_size(domain_dname(zone->apex));
 		if(zone->soa_rrset) 
 			sz += sizeof(uint32_t)*4;
+		sz = htons(sz);
 		/* use blocking writes */
-		log_msg(LOG_INFO, "sending cmd + %d bytes", sz);
-		if(write(xfrd_sock, &cmd,  sizeof(cmd)) == -1 ||
-			write(xfrd_sock, &sz, sizeof(sz)) == -1 ||
-			write(xfrd_sock, domain_dname(zone->apex), 
-				dname_total_size(domain_dname(zone->apex))) == -1)
+		if(!write_socket(xfrd_sock, &cmd,  sizeof(cmd)) ||
+			!write_socket(xfrd_sock, &sz, sizeof(sz)) ||
+			!write_socket(xfrd_sock, domain_dname(zone->apex), 
+				dname_total_size(domain_dname(zone->apex))))
 		{
 			log_msg(LOG_ERR, "problems sending soa info from reload %d to xfrd: %s",
 				(int)nsd->pid, strerror(errno));
@@ -619,18 +619,14 @@ server_reload(struct nsd *nsd, region_type* server_region, netio_type* netio,
 			assert(zone->soa_rrset->rr_count > 0);
 			assert(rrset_rrtype(zone->soa_rrset) == TYPE_SOA);
 			assert(zone->soa_rrset->rrs[0].rdata_count == 7);
-			if(write(xfrd_sock, rdata_atom_data(
-				zone->soa_rrset->rrs[0].rdatas[2]), 
-				sizeof(uint32_t)) == -1
-			   || write(xfrd_sock, rdata_atom_data(
-				zone->soa_rrset->rrs[0].rdatas[3]), 
-				sizeof(uint32_t)) == -1
-			   || write(xfrd_sock, rdata_atom_data(
-				zone->soa_rrset->rrs[0].rdatas[4]), 
-				sizeof(uint32_t)) == -1
-			   || write(xfrd_sock, rdata_atom_data(
-				zone->soa_rrset->rrs[0].rdatas[5]), 
-				sizeof(uint32_t)) == -1)
+			if(!write_socket(xfrd_sock, rdata_atom_data(
+				zone->soa_rrset->rrs[0].rdatas[2]), sizeof(uint32_t))
+			   || !write_socket(xfrd_sock, rdata_atom_data(
+				zone->soa_rrset->rrs[0].rdatas[3]), sizeof(uint32_t))
+			   || !write_socket(xfrd_sock, rdata_atom_data(
+				zone->soa_rrset->rrs[0].rdatas[4]), sizeof(uint32_t))
+			   || !write_socket(xfrd_sock, rdata_atom_data(
+				zone->soa_rrset->rrs[0].rdatas[5]), sizeof(uint32_t)))
 			{
 				log_msg(LOG_ERR, "problems sending soa info from reload %d to xfrd: %s",
 				(int)nsd->pid, strerror(errno));
