@@ -49,6 +49,7 @@ struct xfrd_state {
 
 	/* communication channel with server_main */
 	netio_handler_type ipc_handler;
+	struct xfrd_tcp *ipc_conn;
 	/* xfrd shutdown flag */
 	uint8_t shutdown;
 
